# payroll_working_day

./: .gitignore  README.md  pyproject.toml
payroll_working_day/: hooks.py  modules.txt
payroll_working_day/config/: desktop.py  docs.py
payroll_working_day/overrides/salary_slip/: salary_slip.js  salary_slip.py
payroll_working_day/payroll_working_day/custom/: employee.json
payroll_working_day/payroll_working_day/doctype/payroll_working_days/: payroll_working_days.js  payroll_working_days.json  payroll_working_days.py  test_payroll_working_days.py
